# bs-solctra-next

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Dependencies.cmake  ProjectOptions.cmake  README.md
.devcontainer/: Dockerfile  devcontainer.json
bs_solctra_mpi_openmp/: Makefile  README.md  main_multinode.cpp  solctra_multinode.cpp  solctra_multinode.h  test.slurm  utils.h
bs_solctra_mpi_openmp/configurations/: run_base.slurm
bs_solctra_mpi_openmp/data/resources/: Bobina0m.txt  Bobina1m.txt  Bobina3m.txt
bs_solctra_mpi_openmp/main/: CMakeLists.txt
bs_solctra_mpi_openmp/resources/: Bobina11m.txt  Bobina2m.txt  Bobina4m.txt  Bobina5m.txt  Bobina6m.txt  Bobina7m.txt  Bobina8m.txt
bs_solctra_mpi_openmp/results/: test.slurm
cmake/: Cache.cmake  CompilerWarnings.cmake  Hardening.cmake  InterproceduralOptimization.cmake  Linker.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  Tests.cmake
configurations/: run.sh
data/: imbalanceScenario16Nodes.txt  input_1000.txt
data/resources/: Bobina10m.txt  Bobina9m.txt
main/: CMakeLists.txt
main/include/: ascent_adaptor.h  catalyst_adaptor.h  solctra_multinode.h  utils.h
main/src/: ascent_adaptor.cpp  catalyst_adaptor.cpp  main_multinode.cpp  solctra_multinode.cpp  utils.cpp
